--- a/page2.html
+++ b/page2.html
@@ -82,17 +82,17 @@
             <div class="border-bottom">
                 <div class="bottom-content ">
                     <div class="client-testimonials">
-                        <div class="tit">
-                            <h3 class="title-client-test new-font">Client Testimonials</h3>
-                        </div>
+            
+                        <h3 class="title-client-test new-font">Client Testimonials</h3>
+              
                         <div class="testimonial">
                             <div class="square"> </div>
                             <div class= "text-col">
                                 <p class="cl-text sesquialteral-lines">"Design studios created a beautiful 
                                     website and were a pleasure to work with during the whole process..""
                                 </p>
-                                <p class="fullname ">Sarah Johnson <br>
-                                    <span class="position ">Web Design Media</span></p>
+                                <p class="fullname ">Sarah Johnson </p>
+                                    <p><a href="#" class="position ">Web Design Media</a></p>
                             </div >
                         </div>
                         <div class="testimonial">
@@ -100,8 +100,8 @@
                             <div class="text-col">
                                 <p class="cl-text sesquialteral-lines">"I only have good things to say
                                     about Design Studios - I highly recommend them for promoinal work..."</p>
-                                <p class="fullname">Kate Saunders Software Solutions <br>
-                                    <span class="position">Software Solutions</span></p>
+                                <p class="fullname">Kate Saunders Software Solutions </p>
+                                    <p><a href="#" class="position">Software Solutions </a></p>
                             </div >
                         </div>
                         <div class="testimonial">
@@ -109,8 +109,8 @@
                             <div class="text-col">
                                 <p class="cl-text sesquialteral-lines">"Design Studios have increased traffic 
                                     to my site by over 200%   in just a few months - great work guys!"</p>
-                                <p class="fullname">Dave Cole <br>
-                                    <span class="position"> Global Web Services</span></p>
+                                <p class="fullname">Dave Cole </p>
+                                <p><a href="#" class="position ">Global Web Services</a></p>
                             </div >
                         </div>
                     </div> <!--class "client-testimonials"-->
